# cpp-conan-header-only-exe-test

./: CMakeLists.txt  README.md  conanfile.py
common/: CMakeLists.txt
common/include/common/: algorithm.h
core/: CMakeLists.txt
core/include/core/: core_algorithm.h
core/src/core/: main.cpp
test_package/: .gitignore  CMakeLists.txt
test_package/src/: example.cpp
